AI methods now return `OpenAIResponse`s instead of `JsonObject`s