@@ -1,6 +1,5 @@
 package net.pedroricardo.mixin;
 
-import com.google.gson.JsonObject;
 import com.mojang.authlib.GameProfile;
 import net.fabricmc.fabric.api.entity.FakePlayer;
 import net.minecraft.advancement.AdvancementDisplay;
@@ -12,6 +11,7 @@ import net.minecraft.server.network.ServerPlayerEntity;
 import net.pedroricardo.content.entity.AppleDrEntity;
 import net.pedroricardo.util.AppleDrAI;
 import net.pedroricardo.util.AppleDrConfig;
+import net.pedroricardo.util.OpenAIResponse;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.gen.Accessor;
 import org.spongepowered.asm.mixin.injection.At;
@@ -38,8 +38,8 @@ public class CongratulateAdvancementMixin {
                 ((EntityManagerAccessor)world).entityManager().getLookup().iterate().forEach(entity -> {
                     if (entity instanceof AppleDrEntity appleDr) {
                         try {
-                            JsonObject object = AppleDrAI.sendStoredMessage(key, appleDr.getInitialMessageContext(), new AppleDrAI.Message(AppleDrAI.MessageRole.SYSTEM, String.format("The player %s received the advancement with ID %s. You should congratulate them using the name of the advancement (not the ID).", owner.getDisplayName().getString(), advancementEntry.id().toString())));
-                            String message = object.getAsJsonArray("choices").get(0).getAsJsonObject().getAsJsonObject("message").get("content").getAsString();
+                            OpenAIResponse response = AppleDrAI.sendStoredMessage(key, appleDr.getInitialMessageContext(), new AppleDrAI.Message(AppleDrAI.MessageRole.SYSTEM, String.format("The player %s received the advancement with ID %s. You should congratulate them using the name of the advancement (not the ID).", owner.getDisplayName().getString(), advancementEntry.id().toString())));
+                            String message = response.choices().getFirst().message().content();
                             FakePlayer fakePlayer = FakePlayer.get(owner.getServer().getOverworld(), new GameProfile(appleDr.getGameProfile().getId(), appleDr.getGameProfile().getName()));
                             owner.getServer().getPlayerManager().broadcast(SignedMessage.ofUnsigned(message), fakePlayer, MessageType.params(MessageType.CHAT, fakePlayer));
                         } catch (IOException ignored) {
